add single icon files
minor text edits

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Unsmilely Icon Set</title>
   <link rel="stylesheet" href="css/style.css">
+  <meta name="description" content="Drawing and animating a new set of emoji icons. ">
+  <meta name="keywords" content="illustration, animation, emoji, icon, design, web development, web design">
+  <meta name="author" content="Keith Hart">
 </head>
 
 <body>
@@ -61,7 +64,7 @@
 
 <footer>
 	<p>Made with <span>♥</span> in NYC<br/><br/>
-	<a href="http://strengthofone.com/">strengthofone</a></p>
+	<a href="http://strengthofone.com/unsmilely">strengthofone</a></p>
 </footer>
 
 
